# hsa_project

./: .gitignore  .gitmodules  README.md
doc/: TeachPendant_External control_Connection_Error.md  UR10_real+unity_teleoperation.md
docker/: README.md
docker/docker_containers/: README.md
docker/docker_containers/camera_container/: README.md  launch_docker.sh
docker/docker_containers/core_container/: .gitignore  bashrc  launch_docker.sh
docker/docker_containers/core_container/share/: wrench_visualization.rviz
docker/docker_containers/indy7_container/: README.md  bashrc  launch_docker.sh
docker/docker_containers/mujoco_container/: launch_docker.sh
docker/docker_containers/ros_container/: launch_docker.sh  launch_docker_no_gpu.sh
docker/docker_containers/ros_container/share/: Default.perspective
docker/docker_containers/ros_container/share/catkin_ws/devel/: .rosinstall
docker/docker_containers/ros_container/share/catkin_ws/src/kinect2-ros/kinect2_bridge/: CMakeLists.txt  package.xml
docker/docker_containers/ros_container/share/catkin_ws/src/kinect2-ros/kinect2_bridge/include/kinect2_bridge/: kinect2_definitions.h
docker/docker_containers/ros_container/share/catkin_ws/src/kinect2-ros/kinect2_bridge/launch/: kinect2_bridge.launch
docker/docker_containers/ros_container/share/catkin_ws/src/kinect2-ros/kinect2_bridge/src/: kinect2_bridge.cpp
docker/docker_containers/ros_container/share/catkin_ws/src/ur10_python_interface/: CMakeLists.txt  package.xml
docker/docker_containers/ros_container/share/catkin_ws/src/ur10_python_interface/data/: test
docker/docker_containers/ros_container/share/catkin_ws/src/ur10_python_interface/launch/: controller.launch  interface.launch  interface_virtual.launch  teleop.launch  ursim.launch
docker/docker_containers/ros_container/share/catkin_ws/src/ur10_python_interface/scripts/: ellipsoid_visualizer.py  joy2target.py  mode_manager.py  move_group_python_interface.py  rl_interface.py  teleop_controller.py  topic_remapper.py
docker/docker_containers/ros_container/share/catkin_ws/src/ur10_python_interface/src/: ik_publisher.cpp
docker/docker_containers/ros_container/share/catkin_ws/src/ur10_python_interface/ur10_env/: setup.py
docker/docker_containers/ros_container/share/catkin_ws/src/ur10_python_interface/ur10_env/ur10_env/envs/: ur10_env.py
docker/docker_containers/rsa_container/: .gitattributes  .gitignore  bashrc  launch_docker.sh
docker/docker_containers/unity_container/: bashrc  launch_docker.sh  launch_docker_no_gpu.sh
docker/docker_containers/ur10_container/: .gitignore  bashrc  launch_docker.sh
docker/docker_containers/yh_container/: launch_docker.sh
docker/docker_images/: README.md
docker/docker_images/cuda_image/: cuda_18_04_build.sh  cuda_20_04_build.sh
docker/docker_images/cuda_image/18_04/: cuda_18_04_build.sh
docker/docker_images/cuda_image/20_04/cuda_20_04/: Dockerfile
docker/docker_images/cuda_image/cuda_18_04/: Dockerfile
docker/docker_images/miniconda_image/20.04/: 1_miniconda_build.sh
docker/docker_images/miniconda_image/20.04/miniconda/: Dockerfile
docker/docker_images/ros_image/: 1_cuda_build.sh  2_ros_build.sh  build.sh
docker/docker_images/ros_image/cuda/: Dockerfile
docker/docker_images/ros_image/ros/: Dockerfile
docker/docker_images/ros_image/ros_library/: Dockerfile
docker/docker_images/ros_melodic_image/: 1_ros_build.sh  2_ros_library_build.sh
docker/docker_images/ros_melodic_image/ros/: Dockerfile
docker/docker_images/ros_melodic_image/ros_library/: Dockerfile
docker/docker_images/ros_noetic_image/: 1_ros_build.sh  2_ros_library_build.sh  miniconda_build.sh
docker/docker_images/ros_noetic_image/base/: Dockerfile
docker/docker_images/ros_noetic_image/miniconda/: Dockerfile
docker/docker_images/ros_noetic_image/ros/: Dockerfile
docker/docker_images/ros_noetic_image/ros_library/: Dockerfile
docker/docker_images/rsa_image/: rsa_build.sh
docker/docker_images/rsa_image/miniconda_version/: Dockerfile
docker/docker_images/rsa_image/rsa/: Dockerfile
docker/docker_images/unity_image/: 1_cuda_build.sh  1_hub_build.sh  2_unity_build.sh
docker/docker_images/unity_image/cuda/: Dockerfile
docker/docker_images/unity_image/editor/: Dockerfile
docker/docker_images/unity_image/hub/: Dockerfile
docker/docker_images/unity_image/unity/: Dockerfile
docker_images/cuda_image/18_04/cuda_18_04/: Dockerfile
docker_images/cuda_image/20_04/: cuda_20_04_build.sh
docker_images/cuda_image/20_04/cuda_20_04/: Dockerfile
docker_images/ros_melodic_image/ros/: Dockerfile
docker_images/ros_noetic_image/: base_build.sh  rsa_build.sh
docker_images/ros_noetic_image/base/: Dockerfile
docker_images/ros_noetic_image/rsa/: Dockerfile
docker_images/rsa_image/: miniconda_build.sh  original_build.sh
docker_images/rsa_image/original/: Dockerfile
docker_images/rsa_image/rsa/: Dockerfile
docker_images/unity_image/: 2_editor_build.sh
host_install/: 0_bashrc  0_bashrc.sh  1_basic.sh  2_cuda.sh  3_docker.sh  4_nvidia_docker.sh  4_ros.sh  5_haptic_driver.sh  5_ros.sh  6_haptic_driver.sh  6_haptic_package.sh  7_haptic_package.sh  README.md  TouchDriver2019_2_15_Linux.tar.xz  all.sh
host_ros_package/Geomagic_Touch_ROS_Drivers/omni_common/launch/: omni.launch  omni_state.launch  omni_state_multi.launch
host_ros_package/Geomagic_Touch_ROS_Drivers/omni_common/src/: omni.cpp  omni_state.cpp
note/: 211118_gripper_simulation  Kinect Azure Setup for ROS melodic  UR10 safety password reset  gazebo ur10 gripper  gripper setting  kinect v2 ros melodic  kinect v2 setting  namespace 적용 후 유니티에 import 시 문제점  realsense setting  rsa test  ur10 docker setting  ur10+gripper unity import  ur10-indy7 변경 시 애로사항  zed2 setting  네트워크 이름  eth0으로 변경하는 법
(+5302 files in other folders)
